@@ -66,12 +66,15 @@ class Bid extends BaseActiveModule
 
 		$this -> bid = "";
 
-		$this -> register_command('tell', 'bid', 'MEMBER');
+		$this -> register_command('all', 'bid', 'MEMBER');
 
 		$this -> help['description'] = "Handles auctions using raid points";
 		$this -> help['command']['bid start <item>'] = "Starts an auction for <item>. <item> can be text or an item ref.";
 		$this -> help['command']['bid <points>'] = "Bid <points> raid points for the item currently on auction.";
 		$this -> help['command']['bid info'] = "Shows information about the current auction.";
+
+		$this -> bot -> core("settings") -> create("bid", "timer", 60, "How Long shold a Auction Last?");
+		$this -> bot -> core("settings") -> create("bid", "raid_locked", FALSE, "Should Auction be Locked to Users in Raid?");
 	}
 
 
@@ -85,14 +88,27 @@ class Bid extends BaseActiveModule
 		Switch($msg[1])
 		{
 			case 'start':
-				$this -> start_bid($name, $msg[2]);
-				Break;
+				return $this -> start_bid($name, $msg[2]);
 			case 'info':
 				$this -> info_bid($name);
 				Break;
+			case 'cancel':
+				Return $this -> cancel($name);
+			case 'lock':
+				Return $this -> cancel($name, TRUE);
+			case 'unlock':
+				Return $this -> lock($name, FALSE);
+			case 'history':
+			case 'list':
+				Return $this -> history();
 			Default:
-				if(is_numeric($msg[1]))
-					$this -> place_bid($name, $msg[1]);
+				if(is_numeric($msg[1]) || strtolower($msg[1]) == "all")
+				{
+					if($origin == "tell")
+						$this -> place_bid($name, $msg[1]);
+					else
+						Return("Bids in /tell Only");
+				}
 				else
 					$this -> bot -> send_help($name);
 		}
@@ -107,18 +123,30 @@ class Bid extends BaseActiveModule
 	{
 		if ($this -> bot -> core("security") -> check_access($name, "leader"))
 		{
+			if($this -> bid && $this -> bid != "")
+			{
+				Return("##error##Error: Auction in Progress for item ##highlight##".$this -> bid."##end####end##");
+			}
+			$itemref = explode(" ", $item, 5);
+			if(strtolower($itemref[0]) == "&item&")
+			{
+				$item = $this -> bot -> core("tools") -> make_item($itemref[1], $itemref[2], $itemref[3], $itemref[4], TRUE);
+			}
 			$this -> bid = $item;
-			$this -> maxbid = 1;
-			$this -> secondbid = 1;
+			$this -> maxbid = 0;
+			$this -> name = $name;
+			$this -> secondbid = 0;
 			$this -> highestbidder = "";
+			$this -> locked = $this -> bot -> core("settings") -> get("bid", "raid_locked");
 			$this -> announce = time() + 15;
 			$this -> announced = false;
-			$this -> end = time() + 60;
+			$timer = $this -> bot -> core("settings") -> get("Bid", "timer");
+			$this -> end = time() + $timer;
 			$this -> register_event("cron", "2sec");
 			$msg = "\n##highlight##-------------------------------------##end##\n";
 			$msg .= "##highlight##$name##end## started auction ";
-			$msg .= "on ##highlight##$item##end##! You have ";
-			$msg .= "##highlight##60 seconds##end## to place bids :: " . $this -> info();
+			$msg .= "on ##highlight##$item##end##! \nYou have ";
+			$msg .= "##highlight##$timer seconds##end## to place bids :: " . $this -> info();
 			$msg .= "\n##highlight##-------------------------------------##end##";
 			$this -> bot -> send_output("", $msg, "both");
 		}
@@ -126,7 +154,25 @@ class Bid extends BaseActiveModule
 			$this -> bot -> send_tell($name, "You must be a raidleader to do this");
 	}
 
-
+	function cancel($name)
+	{
+		if ($this -> bot -> core("security") -> check_access($name, "leader"))
+		{
+			if($this -> bid && $this -> bid != "")
+			{
+				$this -> bot -> send_output("", "Auction for item ##highlight##".$this -> bid."##end## Canceled", "both");
+				$this -> bid = "";
+				$this -> type = FALSE;
+				$this -> unregister_event("cron", "2sec");
+			}
+			else
+			{
+				Return("##error##Error: No Auction in Progress##end##");
+			}
+		}
+		else
+			$this -> bot -> send_tell($name, "You must be a raidleader to do this");
+	}
 
 	/*
 	Place a bid
@@ -135,15 +181,31 @@ class Bid extends BaseActiveModule
 	{
 		$update = true;
 
+		if(strtolower($ammount) == "all")
+		{
+			$ammount = $this -> bot -> db -> select("SELECT ".$this -> type."_points FROM #___raid_points WHERE id = " . $this -> points_to($name));
+			if(!empty($ammount))
+				$ammount = $ammount[0][0];
+			else
+				$ammount = 0;
+		}
 		if (empty($this -> bid))
 		{
 			$this -> bot -> send_tell($name, "No auction in progress.");
 			return false;
 		}
-		else if ($ammount < 2)
+		else if ($ammount < 1)
 		{
-			$this -> bot -> send_tell($name, "Min bid is set to ####highlight##2##end## raidpoints.");
+			$this -> bot -> send_tell($name, "Min bid is set to ####highlight##1##end## raidpoints.");
 			return false;
+		}
+		if($this -> locked)
+		{
+			if($this -> bot -> exists_module("raid") && $this -> bot -> core("raid") -> raid && !isset($this -> bot -> core("raid") -> user[$name]))
+			{
+				$this -> bot -> send_tell($name, "This Auction is Locked to Raid Users Only");
+				return false;
+			}
 		}
 
 		$result = $this -> bot -> db -> select("SELECT points FROM #___raid_points WHERE id = " . $this -> points_to($name));
@@ -156,10 +218,22 @@ class Bid extends BaseActiveModule
 		$result = $result[0][0];
 
 		$currenthigh = (($this -> maxbid == $this -> secondbid) ? ($this -> maxbid) : ($this -> secondbid + 1));
+		$currenthighb = $this -> highestbidder;
 
 		if ($result < $ammount)
 		$this -> bot -> send_tell($name, "You only have ##highlight##" . $result .
 		"##end## raidpoints. Please place bid again.");
+		else if ($this -> highestbidder == $name)
+		{
+			if($this -> maxbid < $ammount)
+			{
+				if($this -> secondbid == $this -> maxbid)
+					$this -> secondbid -= 1;
+				$this -> maxbid = $ammount;
+				$this -> bot -> send_tell($name, "Max bid Changed to ##highlight##$ammount##end##.");
+				return false;
+			}
+		}
 		else if ($this -> maxbid == $ammount)
 		{
 			$this -> secondbid = $ammount;
@@ -191,8 +265,12 @@ class Bid extends BaseActiveModule
 				$secs = 10;
 				$this -> end = time() + 10;
 			}
+			if($this -> highestbidder == $currenthighb)
+			{
+				$obb = "##highlight##$name##end## tried to outbid with ##highlight##$ammount##end##, ";
+			}
 
-			$this -> bot -> send_output("", "##highlight##" . $this -> highestbidder . "##end## leads with " .
+			$this -> bot -> send_output("", $obb."##highlight##" . $this -> highestbidder . "##end## leads with " .
 			"##highlight##$highest##end## points. Bidding ends " .
 			"in ##highlight##$secs##end## seconds :: " . $this -> info(), "both");
 		}
@@ -207,17 +285,31 @@ class Bid extends BaseActiveModule
 	{
 		if ($this -> end < time())
 		{
+			if(count($this -> history) > 20)
+			{
+				foreach($this -> history as $k => $v)
+				{
+					if(!$done)
+					{
+						unset($this -> history[$k]);
+						$done = TRUE;
+					}
+				}
+			}
 			if (empty($this -> highestbidder))
 			{
 				$this -> bot -> send_output("", "Auction is over. No bids where placed. Item is FFA.", "both");
+				$this -> history[] = array(time(), $this -> bid, FALSE);
 			}
 			else
 			{
 				$highest = (($this -> maxbid == $this -> secondbid) ? ($this -> maxbid) : ($this -> secondbid + 1));
 				$this -> bot -> send_output("", "##highlight##" . $this -> highestbidder . "##end## has won the auction for ##highlight##" .
-				$this -> bid . "##end##. ##highlight##$highest##end## points are beeing deduced from his account.", "both");
-				$this -> bot -> db -> query("UPDATE #___raid_points SET points = points - " . $highest .
-				" WHERE id = " . $this -> points_to($this -> highestbidder));
+				$this -> bid . "##end##. ##highlight##$highest##end## points are being deducted from this account.", "both");
+				$this -> bot -> core("points") -> rem_points($this -> name, $this -> highestbidder, $highest, "Auction: ".$this -> bid, TRUE);
+			//	$this -> bot -> db -> query("UPDATE #___raid_points SET points = points - " . $highest .
+			//	" WHERE id = " . $this -> points_to($this -> highestbidder));
+				$this -> history[] = array(time(), $this -> bid, $this -> highestbidder, $highest);
 			}
 			$this -> bid = "";
 			$this -> unregister_event("cron", "2sec");
@@ -231,7 +323,7 @@ class Bid extends BaseActiveModule
 	*/
 	function info_bid($name)
 	{
-		$inside = "##blob_title##::::: Bidding info :::::##end##\n\n";
+		$inside = "##blob_title##::::: Bidding Help :::::##end##\n\n";
 		$inside .= "To place a bid write:\n";
 		$inside .= "##blob_text##/tell <botname> <pre>bid &lt;points&gt;##end##\n";
 		$inside .= "(Replace &lt;points&gt; with the number of points you would like to bid)\n\n";
@@ -249,20 +341,96 @@ class Bid extends BaseActiveModule
 	}
 
 
-
 	/*
 	Show info about bidding
 	*/
 	function info()
 	{
-		$inside = "##blob_title##::::: Bidding info :::::##end##\n\n";
+		$inside = "##blob_title##::::: Auction :::::##end##\n\n";
+		$inside .= "##darkorange##".$this -> highestbidder . "##end## Leading bid" . "##highlight## [ " . $this -> maxbid . " ]##end##" . " for = [ " . $this -> bid . " ]" . "\n\n" ;
+		$ammounts = array(2, 10, 20, 50, 70, "nl", 100, 150, 170, 200, 300, "nl", 400, 500, 600, 700, 1000);
+		$highest = (($this -> maxbid == $this -> secondbid) ? ($this -> maxbid) : ($this -> secondbid + 1));
+		foreach($ammounts as $am)
+		{
+			if($am == "nl")
+				$inside .= "\n";
+			elseif($am < $highest)
+			{
+				$inside .= "[ Bid 2 ] | ";
+			}
+			else
+			{
+				$inside .= $this -> bot -> core("tools") -> chatcmd("bid 2", "[ Bid 2 ]")." | ";
+			}
+		}
+		$inside = substr($inside, 0, -3);
+		$inside .= "\n\n";
+		$inside .= $this -> bot -> core("tools") -> chatcmd("points", ":: <font color=#99CC00>Check your points##end## ::")."\n\n";
 		$inside .= "To place a bid write:\n";
 		$inside .= "##highlight##/tell <botname> <pre>bid &lt;points&gt;##end##\n";
 		$inside .= "(Replace &lt;points&gt; with the number of points you would like to bid)\n";
-		return $this -> bot -> core("tools") -> make_blob("click for info", $inside);
+		Return $this -> bot -> core("tools") -> make_blob(":: Enter Auction ::", $inside);
 	}
 
 
+	function lock($name, $lock)
+	{
+		if ($this -> bot -> core("security") -> check_access($name, $this -> bot -> core("settings") -> get('Raid', 'Command')))
+		{
+			if ($lock)
+			{
+				if($this -> locked)
+				{
+					$this -> bot -> send_tell($name, "Auction is Already ##highlight##locked##end##");
+					return FALSE;
+				}
+				else
+				{
+					$this -> locked = true;
+					$this -> bot -> send_output("", "##highlight##$name##end## has ##highlight##locked##end## the Auction.", "both");
+					return("Auction ##highlight##locked##end##");
+				}
+			}
+			else
+			{
+				if(!$this -> locked)
+				{
+					$this -> bot -> send_tell($name, "Auction is Already ##highlight##unlocked##end##");
+					return FALSE;
+				}
+				else
+				{
+					$this -> locked = false;
+					$this -> bot -> send_output("", "##highlight##$name##end## has ##highlight##unlocked##end## the Auction.", "both");
+					return("Auction ##highlight##unlocked##end##");
+				}
+			}
+		}
+		else
+			return "You must be a " . $this -> bot -> core("settings") -> get('Raid', 'Command') . " to do this";
+	}
+
+	function history()
+	{
+		if(!empty($this -> history))
+		{
+			$inside = " :: Auction History ::";
+			foreach($this -> history as $h)
+			{
+				$inside .= "\n\n".gmdate($this -> bot -> core("settings") -> get("Time", "FormatString"), $h[0]) . " GMT";
+				$inside .= "\nItem: ".$h[1];
+				if($h[2])
+					$inside .= "\nResult: $h[2] for $h[3] points";
+				else
+					$inside .= "\nResult: FFA";
+			}
+			Return("Auction History :: ".$this -> bot -> core("tools") -> make_blob("click to view", $inside));
+		}
+		else
+		{
+			Return("No Auction History Found");
+		}
+	}
 
 	/*
 	Get correct char for points
